# loo

./: .gitignore  Cargo.toml  README.md  package-lock.json  plan_input.txt  story.md  system.md  test_autocomplete_debug.py  test_cli.py  test_cursor_bug.py  test_folder_drilling.py  test_list_models.py  test_wrapping.sh
dicom_viewer/: index.html
dicom_viewer/lib/: dicomParser.min.js
docs/: CORE_IMPROVEMENT_PLAN.md  HOW_LOO_WORKS.md  loo.md
examples/: simple_llm_interaction.py
prompts/: action_plan_prompt.md
src/: engine.rs  execution_stack.rs  lib.rs  llm_intent_recognition.rs  llm_schemas.rs  main.rs  plan_display.rs  prompts.rs  semantic_engine.rs
src/autocomplete/: mod.rs
src/cli/: mod.rs
src/commands/: engine_commands.rs  mod.rs  plan.rs  registry.rs
src/config/: mod.rs
src/openrouter/: mod.rs
src/story/: mod.rs
src/terminal/: mod.rs
src/tools/: mod.rs
tests/: e2e_tests.rs  test_cursor_fix.py  test_cursor_issue.py  test_double_tab.py  test_execution.txt  test_list_models.py  test_plan.json  test_recursive_execution.sh  test_wrapping_final.sh  unit_tests.rs
tests/common/: mod.rs
tests/e2e/: framework.rs  mod.rs  prompt_scenarios.rs
tests/fixtures/: scenarios.json
tests/integration/: cli_integration.rs  mod.rs
tests/mocks/: mod.rs  openrouter_server.rs
tests/unit/: config_tests.rs  mod.rs  tool_tests.rs
